bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:3: error: value and is not a member of Boolean
    if (a<0 and b<0) {
            ^PosNeg:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (a<0 and b<0) {
    ^PosNeg:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (negative == true) {
  ^